--- a/Pipfile
+++ b/Pipfile
@@ -7,3 +7,4 @@ name = "pypi"
 "e1839a8" = {path = ".", editable = true}
 
 [dev-packages]
+"e1839a8" = {path = ".", extras = ["dev"], editable = true}
