--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,7 @@ python:
   - 3.6
 
 addons:
-  postgresql: "10"
-  apt:
-    packages:
-      - postgresql-10
-      - postgresql-client-10
+  postgresql: "9.6"
 
 services:
   - postgresql
@@ -30,7 +26,7 @@ install:
   - pipenv install --system --skip-lock --deploy --verbose
 
 before_script:
-  - createdb10 htest
+  - createdb htest
 
 script:
   - PYTHONWARNINGS=default pipenv run pytest --cov=hyputils
