travis fix pytest install an include memex deps for tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,10 @@ services:
   - postgresql
 
 install:
+  - pip install --upgrade pytest pytest-cov
   - pip install pipenv
   - pip install coverage coveralls && export HAS_COVERALLS=1
-  - pipenv install --dev --system --skip-lock --deploy
+  - pipenv install --dev --system --skip-lock --deploy .[memex]
 
 before_script:
   - createdb htest
