travis modified pipfile to see if this variant works

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ install:
   - pip install --upgrade pytest pytest-cov
   - pip install pipenv
   - pip install coverage coveralls && export HAS_COVERALLS=1
-  - pipenv install --dev --system --skip-lock --deploy .[memex]
+  - pipenv install --dev --system --skip-lock --deploy
 
 before_script:
   - createdb htest
