--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-"e1839a8" = {path = ".", editable = true}
+"e1839a8" = {path = ".", extras = ["memex"]}
 
 [dev-packages]
 "e1839a8" = {path = ".", extras = ["dev"], editable = true}
