--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,6 @@
 test=pytest
 [tool:pytest]
 testpaths=test
-addopts=--verbose --color=yes -W ignore --cov=hyputils
+addopts=--verbose --color=yes -W ignore
 [bdist_wheel]
 universal=1
