--- a/.travis.yml
+++ b/.travis.yml
@@ -34,4 +34,4 @@ script:
   - pipenv run pytest --cov=hyputils
 
 after_success:
-  - if [[ $HAS_COVERALLS && TRAVIS_PYTHON_VERSION == 3.7 ]] ; then coveralls ; fi
+  - if [[ $HAS_COVERALLS && $TRAVIS_PYTHON_VERSION == 3.7 ]] ; then coveralls ; fi
